# Web3-Browser

./: .brave_gclient  BUILD.gn  CONTRIBUTING.md  DEPS  PRESUBMIT.py  README.md  args.gn  buildRelease.bat  files to be changed.txt  get-code-and-build.bat  get-code-and-build.sh  naeem_chromium_patches.txt  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: sync-pr-from-fork.yml  update-dep.yml
.storybook/: locale.ts  manager.js
Kahf Browser/: product.icon
android/java/: AndroidManifest_intent_filters.xml
app/: brave_exe.ver  brave_generated_resources.grd  brave_settings_strings.grdp  brave_strings_override.grd  extensions_strings_override.grdp  file_manager_strings.grdp  generated_resources_override.grd  nux_strings.grdp  os_settings_strings_override.grdp  settings_brave_strings_override.grdp  settings_strings_override.grdp
app/resources/: brave_generated_resources_am.xtb  brave_generated_resources_ar.xtb  brave_generated_resources_bg.xtb  brave_generated_resources_bn.xtb  brave_generated_resources_ca.xtb  brave_generated_resources_cs.xtb  brave_generated_resources_da.xtb  brave_generated_resources_de.xtb  brave_generated_resources_el.xtb  brave_generated_resources_en-GB.xtb  brave_generated_resources_es-419.xtb  brave_generated_resources_es.xtb  brave_generated_resources_et.xtb  brave_generated_resources_fa.xtb  brave_generated_resources_fi.xtb  brave_generated_resources_fil.xtb  brave_generated_resources_fr-CA.xtb  brave_generated_resources_fr.xtb  brave_generated_resources_gl.xtb  brave_generated_resources_gu.xtb  brave_generated_resources_hi.xtb  brave_generated_resources_hr.xtb  brave_generated_resources_hu.xtb  brave_generated_resources_id.xtb  brave_generated_resources_it.xtb  brave_generated_resources_iw.xtb  brave_generated_resources_ja.xtb  brave_generated_resources_kn.xtb  brave_generated_resources_ko.xtb  brave_generated_resources_lt.xtb  brave_generated_resources_lv.xtb  brave_generated_resources_ml.xtb  brave_generated_resources_mr.xtb  brave_generated_resources_ms.xtb  brave_generated_resources_nl.xtb  brave_generated_resources_no.xtb  brave_generated_resources_pl.xtb  (+179 more)
browser/: about_flags.cc  brave_content_browser_client.cc  brave_content_browser_client_browsertest.cc  brave_profile_prefs.cc  brave_scheme_load_browsertest.cc  sources.gni
browser/ui/: BUILD.gn  (+4 more)
common/: brave_channel_info_unittest.cc  brave_content_client_unittest.cc
components/: new_or_sad_tab_strings_override.grdp  ntp_tiles_strings.grdp  security_interstitials_strings_override.grdp
patches/: chrome-browser-component_updater-updater_state_win.cc.patch  chrome-browser-resources-bookmarks-command_manager.ts.patch  chrome-browser-spellchecker-spellcheck_hunspell_dictionary.cc.patch  chrome-browser-ui-BUILD.gn.patch  chrome-chrome_proxy-chrome_proxy_main_win.cc.patch  chrome-installer-gcapi-gcapi.cc.patch  chrome-installer-gcapi-google_update_util.cc.patch  chrome-installer-launcher_support-chrome_launcher_support.cc.patch  chrome-installer-linux-debian-build.sh.patch  chrome-installer-mini_installer-chrome.release.patch  chrome-installer-util-google_update_settings.cc.patch  components-minidump_uploader-android-java-src-org-chromium-components-minidump_uploader-MinidumpUploader.java.patch  components-os_crypt-sync-key_storage_kwallet_unittest.cc.patch
resources/: brave_allowlist.py
script/: chromium-rebase-l10n.py  deps_config.py  generate_licenses.py  policy_source_helper.py  signing_helper.py
test/: BUILD.gn
(+1092 files in other folders)
