sardine_client_id = ""
sardine_client_secret = ""
is_asan = false
enable_rust = true
enable_brave_vpn=false
enable_full_stack_frames_for_profiling = false
v8_enable_verify_heap = false
disable_fieldtrial_testing_config = true
safe_browsing_mode = 1
brave_services_key = ""
root_extra_deps = [ "//brave" ]
is_component_build = true
is_universal_binary = false
proprietary_codecs = true
ffmpeg_branding = "Chrome"
branding_path_component = "brave"
branding_path_product = "brave"
enable_nacl = false
enable_widevine = true
ignore_missing_widevine_signing_cert = false
target_cpu = "x64"
is_official_build = false
is_debug = false
dcheck_always_on = true
brave_channel = "development"
brave_google_api_key = "AIzaSyAREPLACEWITHYOUROWNGOOGLEAPIKEY2Q"
brave_google_api_endpoint =
    "https://www.googleapis.com/geolocation/v1/geolocate?key="
google_default_client_id = ""
google_default_client_secret = ""
brave_infura_project_id = ""
brave_zero_ex_api_key = ""
bitflyer_production_client_id = ""
bitflyer_production_client_secret = ""
bitflyer_production_fee_address = ""
bitflyer_production_url = ""
bitflyer_sandbox_client_id = ""
bitflyer_sandbox_client_secret = ""
bitflyer_sandbox_fee_address = ""
bitflyer_sandbox_url = ""
gemini_production_api_url = ""
gemini_production_client_id = ""
gemini_production_client_secret = ""
gemini_production_fee_address = ""
gemini_production_oauth_url = ""
gemini_sandbox_api_url = ""
gemini_sandbox_client_id = ""
gemini_sandbox_client_secret = ""
gemini_sandbox_fee_address = ""
gemini_sandbox_oauth_url = ""
uphold_production_api_url = ""
uphold_production_client_id = ""
uphold_production_client_secret = ""
uphold_production_fee_address = ""
uphold_production_oauth_url = ""
uphold_sandbox_api_url = ""
uphold_sandbox_client_id = ""
uphold_sandbox_client_secret = ""
uphold_sandbox_fee_address = ""
uphold_sandbox_oauth_url = ""
zebpay_production_api_url = ""
zebpay_production_client_id = ""
zebpay_production_client_secret = ""
zebpay_production_oauth_url = ""
zebpay_sandbox_api_url = ""
zebpay_sandbox_client_id = ""
zebpay_sandbox_client_secret = ""
zebpay_sandbox_oauth_url = ""
brave_version_major = "1"
brave_version_minor = "62"
brave_version_build = "166"
chrome_version_string = "121.0.6167.184"
brave_sync_endpoint = ""
safebrowsing_api_endpoint = ""
brave_variations_server_url = ""
updater_prod_endpoint = ""
updater_dev_endpoint = ""
webcompat_report_api_endpoint = "https://webcompat.brave.com/1/webcompat"
rewards_grant_dev_endpoint = ""
rewards_grant_staging_endpoint = ""
rewards_grant_prod_endpoint = ""
brave_stats_api_key = ""
brave_stats_updater_url = ""
enable_hangout_services_extension = true
enable_cdm_host_verification = false
enable_pseudolocales = false
skip_signing = true
sparkle_dsa_private_key_file = ""
sparkle_eddsa_private_key = ""
sparkle_eddsa_public_key = ""
use_goma = false
use_remoteexec = false
use_libfuzzer = false
enable_updater = false
enable_update_notifications = false
brave_services_production_domain = ""
brave_services_staging_domain = ""
brave_services_dev_domain = ""
enable_dangling_raw_ptr_checks = false
brave_services_key_id = ""
service_key_aichat = ""
chrome_pgo_phase = 0
use_dummy_lastchange = true
enable_mojom_message_id_scrambling = false
cc_wrapper = "D:\naaee\Asil\src\out\redirect_cc\redirect_cc"
enable_brave_page_graph = true
enable_brave_page_graph_webapi_probes = true
